--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,8 +2,7 @@ backend:
   name: git
   repo: your-username/your-repo-name # GitHubリポジトリ
   branch: main # 使用するブランチ
-name: git
-  repo: muneo992/my-nuxt-app # GitHubリポジトリ
+name: git-gateway
   branch: main # 使用するブランチ
 
 media_folder: "static/images/uploads" # 画像のアップロード先
@@ -13,6 +12,7 @@ collections:
   - name: "cars"
     label: "Cars"
     folder: "content/cars"
+    format: 'frontmatter' 
     create: true
     fields:
       - { name: "title", label: "Title", widget: "string" }
